# Changelog

## Alpha XXX (Unreleased)

* UI: "Erfolg" Screen nach jedem Level
* Global: Im angezeigten Punktestand werden die Punkte aus den anderen Maps jetzt mit einberechnet
* Audio: Master Lautstärkeregler hinzugefügt
* Neues Essen: Pizza

## Alpha 016 (Unreleased)

* Linux: Spiel kann jetzt auch gestartet werden, wenn libportaudio2 nicht installiert ist.
* Menü: Option "Qualität" jetzt auch in den In-Game-Grafikeinstellungen geändert werden
* Neues Essen: Donuts

## Alpha 015 (09.07.2024)

* Global: Ausdauer entfernt
* Global: Kamera-Bewegung optimiert
* map02: Kakteen hinzugefügt
* Controller: Vibration hinzugefügt
* map03: Slimer hinzugefügt
* map03: Puzzle mit Ventil hinzugefügt
* map03: Nebel animiert
* Global: Highscore kann übertragen werden
* map02, map03: Color Tint Post-Processing Effekt hinzugefügt
* Global: Filmgrain Post-Processing Effekt hinzugefügt
* Launcher: Zu kleine Bildschirmauflösungen entfernt
* Grafikoption "Qualität" zu Launcher hinzugefügt

## Alpha 014 (21.06.2024)

* Global: Äpfel hinzugefügt
* map02: Tretminen hinzugefügt
* Audio: "Beep" Soundeffekt ersetzt
* Global: Support für Rii USB Classic Controller wieder entfernt
* Launcher: Es werden nur noch vom Betriebssystem unterstützte Audio Backends angezeigt
* UI: Lautstärke-Regler für Umgebungsgeräusche hinzugefügt
* Menüpunkt "Level neu Starten" zu Pausenmenü hinzugefügt

## Global: Alpha 013 (24.05.2024)

* map02: Puzzle mit Strom-Hindernis hinzugefügt
* map02: kann jetzt durchgespielt werden
* map03: hinzugefügt
* Global: Gegner KI verbessert
* UI: Bloody Screen Effekt hinzugefügt
* UI: Menüpunkt "Online-Bestenliste" hinzugefügt
* UI: Unnötige Grafikeinstellungen entfernt
* UI: Neue Hauptmenü Musik
* UI: Ladebildschirm Musik hinzugefügt
* UI: Lautstärke-Regler zu Audioeinstellungen hinzugefügt

## Alpha 012 (17.05.2024)

* map01: Autos kollidieren nicht mehr nach einiger Spielzeit
* map02: Hühner sterben jetzt, wenn sie von einem Auto überfahren werden